removed z-index and fixed postition to navlist

--- a/public/styles.css
+++ b/public/styles.css
@@ -450,8 +450,7 @@ textarea {
     justify-content: start;
     padding: 3rem 0;
     overflow: auto;
-    z-index: 200;
-    position: fixed;
+   
   }
   .popup .nav-list > li {
     width: 100%;
